add missing classes